# CV-color-detector

./: README.md  main.py  pyproject.toml  util.py
